@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-09-10T01:03:06Z",
+  "timestamp" : "2025-09-10T12:27:13Z",
   "count_outdated" : 5300,
   "uniques_outdated" : 2919,
-  "count" : 5322,
-  "uniques" : 2939,
+  "count" : 5323,
+  "uniques" : 2940,
   "clones" : [
     {
       "timestamp": "2025-08-28T00:00:00Z",
@@ -115,6 +115,15 @@
     },
     {
       "timestamp": "2025-09-09T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-09-10T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
