@@ -1,5 +1,5 @@
 {
-  "count": 22,
+  "count": 23,
   "uniques": 7,
   "clones": [
     {
@@ -64,6 +64,11 @@
     },
     {
       "timestamp": "2025-09-09T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-09-10T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
